[package]
name = "archive-sys"
description = "Rust bindings to libarchive"
version = "3.7.7"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
authors = ["Kiwifruit <mahkiwi123@gmail.com>"]
homepage = "https://github.com/Kiwifuit/archive-sys"

[package.metadata.deb]
depends = [ "libarchive13t64 >= 3.7.2" ]

[dependencies]

[build-dependencies]
anyhow = "1.0.90"
bindgen = "0.70.1"
pkg-config = "0.3.31"
