[package]
name = "archive-sys"
version = "3.7.7"
edition = "2021"
description = "Rust bindings for libarchive"
authors = ["Kiwifruit <mahkiwi123@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Kiwifuit/archive"

[package.metadata.deb]
depends = ["libarchive13t64 >= 3.7.2"]

[dependencies]

[build-dependencies]
anyhow = "1.0.90"
bindgen = "0.70.1"
pkg-config = "0.3.31"
